# agentic-data-scientist

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: pr.yml  release.yml  release_beta.yml
docs/: api_reference.md  cli_reference.md  extending.md  getting_started.md  tools_configuration.md
src/agentic_data_scientist/agents/adk/: agent.py  event_compression.py  utils.py
src/agentic_data_scientist/agents/claude_code/: agent.py
src/agentic_data_scientist/cli/: main.py
src/agentic_data_scientist/core/: api.py
src/agentic_data_scientist/prompts/base/: summary.md
src/agentic_data_scientist/tools/: __init__.py  file_ops.py
stress_test_output/: .gitignore  README.md  STAGE1_MANIFEST.json  STAGE3_MANIFEST.json  STAGE4_MANIFEST.json  STAGE5_MANIFEST.json  pyproject.toml
stress_test_output/results/: 01_column_metadata.csv  01_data_quality_report.json  02_categorical_feature_profile.csv  02_conversion_by_category.json  02_feature_list.json  02_numeric_by_target.json  02_numerical_feature_profile.csv  02_variant_performance.csv  03_feature_correlations.csv  RANDOMIZATION_ANALYSIS_SUMMARY.txt  RANDOMIZATION_EXECUTIVE_SUMMARY.md  RANDOMIZATION_QUALITY_REPORT.txt  SESSION_COMPLETION_SUMMARY.txt  SKILLS_USAGE_SUMMARY.txt  STAGE1_SUMMARY.txt  STAGE2_EXECUTION_LOG.txt  STAGE2_KEY_INSIGHTS.md  STAGE2_MANIFEST.json  STAGE2_SUMMARY.txt  STAGE3_EXECUTION_LOG.txt  STAGE3_SUMMARY.txt  STAGE4_EXECUTION_SUMMARY.txt  STAGE4_HYPOTHESES_AND_RECOMMENDATIONS.md  STAGE5_BUSINESS_SUMMARY.txt  STAGE5_TECHNICAL_REPORT.txt  randomization_categorical_balance.csv  randomization_continuous_balance.csv  randomization_quality_summary.json  randomization_temporal_balance.json  randomization_variant_counts.csv  stage2_production_comparison.csv  stage2_variant_performance_detailed.csv  stage3_categorical_bivariate.csv  stage3_categorical_stats.csv  stage3_deep_dive_has_debit_card.csv  stage3_deep_dive_has_multiple_pet_discount.csv  stage3_deep_dive_has_strongly_connected_users.csv  stage3_deep_dive_state.csv  stage3_feature_group_importance.csv  stage3_feature_importance_ranking.csv  (+14 more)
stress_test_output/workflow/: 01_data_loading_profiling.py  02_detailed_cleaning_profiling.py  03_fix_income_and_visualize.py  randomization_quality_analysis.py  stage2_deep_dive.py  stage2_target_metric_analysis.py  stage3_feature_analysis.py  stage3_feature_importance.py  stage3_visualizations.py  stage4_collinearity_analysis.py  stage4_feature_engineering.py  stage4_feature_testing.py  stage4_visualizations.py  stage5_synthesis_report.py
