[project]
name = "lemonade-agentic-data-scientist"
version = "0.2.2"
description = "Agentic Data Scientist - General-purpose multi-agent framework with ADK and Claude Code"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = {text = "MIT"}
authors = [
    {name = "K-Dense", email="contact@k-dense.ai"}
]
keywords = ["ai", "agents", "adk", "claude", "multi-agent", "llm", "data-science"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "google-adk==1.18.0",
    "google-genai>=1.26.0",
    "claude-agent-sdk>=0.1.5",
    "click>=8.1.0",
    "aiofiles>=24.1.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "jinja2>=3.1.0",
    "mcp>=1.0.0",
    "litellm>=1.0.0",
    "requests>=2.32.5",
]

[project.urls]
Homepage = "https://github.com/Or-tuchman-lem/agentic-data-scientist"
Repository = "https://github.com/Or-tuchman-lem/agentic-data-scientist"
Documentation = "https://github.com/Or-tuchman-lem/agentic-data-scientist/blob/main/docs"
Issues = "https://github.com/Or-tuchman-lem/agentic-data-scientist/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.13.1",
]

[project.scripts]
lemonade-agentic-data-scientist = "agentic_data_scientist.cli.main:main"

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "agentic_data_scientist"

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [".git", ".venv", ".mypy_cache", ".ruff_cache", "__pycache__", "build", "dist"]

[tool.ruff.format]
quote-style = "preserve"
docstring-code-format = false

[tool.ruff.lint]
extend-select = ["I"]
ignore = ["E501", "W505", "COM812", "ISC001"]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "python-semantic-release>=10.0.2,<11.0.0",
]

[[tool.uv.index]]
name = "codeartifact"
url = "https://lemonade-338029825956.d.codeartifact.us-east-1.amazonaws.com/pypi/lemonade/simple/"
publish-url = "https://lemonade-338029825956.d.codeartifact.us-east-1.amazonaws.com/pypi/lemonade/"
explicit = true

[tool.semantic_release]
build_command = """
    uv lock --upgrade-package "$PACKAGE_NAME"
    git add uv.lock
    uv build
"""
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/agentic_data_scientist/__init__.py:__version__"]
commit_message = "{version}\n\nAutomatically generated by python-semantic-release [skip ci]"
commit_parser = "conventional"
logging_use_named_masks = false
major_on_zero = false
allow_zero_version = true
no_git_verify = false
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.branches.beta]
match = "^(?!main$).*"
prerelease = "true"
changelog = false

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "semantic-release <semantic-release>"

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
other_allowed_tags = ["build", "chore", "ci", "docs", "style", "refactor", "test"]
allowed_tags = ["feat", "fix", "perf", "build", "chore", "ci", "docs", "style", "refactor", "test"]
default_bump_level = 0
parse_squash_commits = true
ignore_merge_commits = true

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false
insecure = false

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]

